<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_coordinator"
    style="@style/BaseCoordinatorStyle"
    tools:context=".ui.login.LoginAty">

    <include layout="@layout/include_tool_bar" />

    <LinearLayout
        style="@style/LinearStyle"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:id="@+id/login_form"
            style="@style/BaseScrollviewStyle">

            <LinearLayout
                android:id="@+id/email_login_form"
                style="@style/LinearContantStyle">

                <android.support.design.widget.TextInputLayout style="@style/BaseTextinputStyle">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        style="@style/BaseAutocompleteStyle"
                        android:hint="@string/prompt_email" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout style="@style/BaseTextinputStyle">

                    <EditText
                        android:id="@+id/password"
                        style="@style/EditPasswordStyle"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_register"
                    style="@style/ButtonStyle"
                    android:text="@string/title_activity_register_aty" />

                <Button
                    android:id="@+id/btn_register_shop"
                    style="@style/ButtonStyle"
                    android:text="@string/title_activity_register_shop" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>


