<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_coordinator"
    style="@style/BaseCoordinatorStyle"
    tools:context=".ui.login.LoginAty">

    <include layout="@layout/include_tool_bar" />

    <LinearLayout
        style="@style/BaseLinearlayoutStyle"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="@style/BaseProgressbarStyle"
            tools:visibility="visible" />

        <ScrollView
            android:id="@+id/login_form"
            style="@style/BaseScrollviewStyle">

            <LinearLayout
                android:id="@+id/email_login_form"
                style="@style/BaseLinearlayoutContantStyle">

                <android.support.design.widget.TextInputLayout style="@style/BaseTextinputStyle">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        style="@style/BaseAutocompleteStyle"
                        android:hint="@string/prompt_email" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout style="@style/BaseTextinputStyle">

                    <EditText
                        android:id="@+id/password"
                        style="@style/BaseEditStyle"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_sign_in"
                    style="@style/BaseButtonStyle"
                    android:text="@string/action_sign_in" />

                <Button
                    android:id="@+id/btn_register"
                    style="@style/BaseButtonStyle"
                    android:text="@string/title_activity_register_aty" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>


